--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -14,12 +14,12 @@ jobs:
     steps:
     - uses: shivammathur/setup-php@15c43e89cdef867065b0213be354c2841860869e
       with:
-        php-version: '8.0'
+        php-version: '8.2'
     - uses: actions/checkout@v3
     - name: Copy .env
       run: php -r "file_exists('.env') || copy('.env.example', '.env');"
     - name: Install Dependencies
-      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist --ignore-platform-reqs
+      run: composer install -q --no-ansi --no-interaction --no-scripts --no-progress --prefer-dist
     - name: Generate key
       run: php artisan key:generate
     - name: Generate jwt token
@@ -30,6 +30,10 @@ jobs:
       run: |
         mkdir -p database
         touch database/database.sqlite
+    - name: Check codestyle, phpstan
+      run: composer check
+    - name: Fix codestyle
+      run: composer fix
     - name: Execute tests (Unit and Feature tests) via PHPUnit
       env:
         DB_CONNECTION: sqlite
