--- a/.github/workflows/laravel.yml
+++ b/.github/workflows/laravel.yml
@@ -30,6 +30,10 @@ jobs:
       run: |
         mkdir -p database
         touch database/database.sqlite
+    - name: Make migrations
+      run: php artisan migrate
+    - name: Make seeders
+      run: php artisan db:seed
     - name: Check codestyle, phpstan
       run: composer check
     - name: Fix codestyle
